--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "format": "prettier --write ./**/*.{js,jsx,ts,tsx,css,md,json} --config ./.prettierrc.json"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "typewriter-effect": "^2.21.0"
     },
     "devDependencies": {
         "@eslint/compat": "^1.1.1",
